# GetLuckyNum

./: .gitignore  CMakeLists.txt  Core.cpp  Core.h  config.properties  main.cpp
src/: Core.cpp  Core.h  ImgGenerator.cpp  ImgGenerator.h  Util.cpp  Util.h  main.cpp
